# article_scout_agent

./: .dockerignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  article_scout_agent.py  env.example  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
config/: settings.py
docker/: Dockerfile  docker-compose.yml
docs/: badges.md  technical-diagrams.md
scripts/: build.sh  dev.sh
src/article_scout/: __init__.py  article_scout_agent.py  main.py  streamlit_app.py
src/article_scout/utils/: __init__.py
tests/: __init__.py  test_integration.py  test_pdf_extraction.py  test_streamlit_demo.py  test_streamlit_integration.py
utils/: pdf_extractor.py
